Fix PowerShell syntax for version injection

--- a/.github/workflows/build-woa-monitor.yml
+++ b/.github/workflows/build-woa-monitor.yml
@@ -39,8 +39,11 @@ jobs:
       - name: Inject version number
         run: |
           $version = "1.0.${{ github.run_number }}"
-          $content = "`"``"``"Version information for WOA Monitor.`"``"``"`n`n__version__ = `"$version`""
-          Set-Content -Path "woa/__version__.py" -Value $content
+          @"
+          """Version information for WOA Monitor."""
+
+          __version__ = "$version"
+          "@ | Set-Content -Path "woa/__version__.py"
           Write-Host "Updated version to: $version"
           Get-Content "woa/__version__.py"
 
